# jump-report-selector

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  draw_logic.py  history_cleanup.py  main.py  migrations.py  models.py  schemas.py
backend/app/routers/: absences.py  auth.py  course_sessions.py  draws.py  exports.py  questions.py  reports.py  students.py
backend/scripts/: init_db.py  seed_demo_data.py
backend/tests/: test_history_cleanup_and_draw_logic.py  test_schema_date_updates.py
deploy/: Caddyfile  jump-report-selector-backend.service  jump-report-selector.env.example  nginx.conf  nginx.no-docker.conf
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  StatCard.tsx  WeightExplanation.tsx
frontend/src/pages/: AbsencesPage.tsx  CourseSessionsPage.tsx  DashboardPage.tsx  DrawHistoryPage.tsx  DrawPage.tsx  ExportPage.tsx  LoginPage.tsx  QuestionsPage.tsx  ReportsPage.tsx  StudentsPage.tsx
frontend/src/types/: index.ts
