[project]
name = "jump-report-selector-backend"
version = "1.0.0"
description = "FastAPI backend for the JUMP classroom report selector."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "python-jose==3.3.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.uv]
package = false
